--- a/index.html
+++ b/index.html
@@ -23,9 +23,27 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+<!-- Add your site or application content here -->
+<main>
+  <div id="panel-top">
+    <div class="panel-t-item">
+      <div class="heading">Hit</div>
+      <div class="value" id="hit">5</div>
+    </div>
+    <div class="panel-t-item">
+      <div class="heading">Timer</div>
+      <div class="value" id="timer">60</div>
+    </div>
+    <div class="panel-t-item">
+      <div class="heading">Score</div>
+      <div class="value" id="score">5</div>
+    </div>
+
+  </div>
+  <div id="panel-bottom">
+  </div>
+</main>
+<script src="js/app.js"></script>
 
 </body>
 
